--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,7 +6,7 @@
 */
 @import url('./fonts.css');
 @import url('./reset.css');
-@import url('./variable.css');
+@import url('./variables.css');
 @import url('./components.css');
 
 @import url('./header.css');
